fixed some issues in the header, particularly on mobile. also added .js to the title.

--- a/src/app/app/app.component.css
+++ b/src/app/app/app.component.css
@@ -77,7 +77,7 @@ nav a {
         margin-left: -6px;
     }
     ul {
-        width: 110px;
+        width: 140px;
     }
 }
 
