--- a/src/styles.css
+++ b/src/styles.css
@@ -81,7 +81,7 @@ h3:before {
     }
 }
 
-@media(max-width:340px) {
+@media(max-width:400px) {
     .hide-on-tiny {
         display: none;
     }
